# GCRip

./: README.md  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/gcrip/: __main__.py  gcrip.py  mpls.py
